--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "chirp-frontend": {
+    "social-media": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/chirp-frontend",
+            "outputPath": "dist/social-media",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -62,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "chirp-frontend:build"
+            "browserTarget": "social-media:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "chirp-frontend:build:production"
+              "browserTarget": "social-media:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chirp-frontend:build"
+            "browserTarget": "social-media:build"
           }
         },
         "test": {
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -110,19 +112,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "chirp-frontend:serve"
+            "devServerTarget": "social-media:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "chirp-frontend:serve:production"
+              "devServerTarget": "social-media:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "chirp-frontend",
+  "defaultProject": "social-media",
   "cli": {
-    "analytics": "c4a8ba0e-e39d-4be1-90e2-bc00c2aff31a"
+    "analytics": false
   }
 }
