--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,6 @@ e2e/*.map
 # Ignore all local history of files
 .history
 
-# End of https://www.gitignore.io/api/angular,visualstudiocode
+# custom tags
+
+.vscode/
